--- a/styles.css
+++ b/styles.css
@@ -185,3 +185,29 @@ footer > p > a {
 footer > p > a:visited {
     color: var(--text-color);
 }
+
+/*1440 px*/
+@media (min-width: 1440px) {
+    .card-container {
+        width: 100%;
+        height: 95vh;
+        background-image: url(./assets/pattern-background-desktop.svg);
+        background-repeat: no-repeat;
+        background-size: contain;
+        background-attachment: fixed;
+        background-position: top;
+    }
+
+    .card {
+        width: 25%;
+        padding-bottom: 0.1rem;
+    }
+
+    .card > p {
+        width: 80%;
+    }
+
+    footer {
+        height: 5vh;
+    }
+}
